# ze

./: .gitignore  CMakeLists.txt  README.md  bootstrap.sh  vcpkg.json
cmake/: ProvideDependencies.cmake
envoy/: http.yaml
example/: CMakeLists.txt
example/cpp/proto/proto/: employee.grpc.pb.cc  greet.grpc.pb.cc  greet.grpc.pb.h  greet.pb.cc  greet.pb.h  route.grpc.pb.h  route.pb.cc  route.pb.h
example/cpp/src/grpc/: async_multi_server.cxx  callback_server.client.cpp  callback_server.cpp  sync_server.cpp
example/cpp/src/protobuf/: deserialize.cpp
example/cpp/src/zmq/: pushpull_push.cpp  reqrep_req.cpp
example/cpp/zmq/: exclusivepair_pair_one.cpp  pubsub_pub.cpp  reqrep_rep.cpp
example/grpc/: async_client.cpp  async_server.cpp  route_db.json  server.cpp  sync_client.cpp
example/model/: greet.proto  route.proto
example/protobuf/: arena.cpp  serialize.cpp
example/zmq/: dealerrouter_dealer.cpp  dealerrouter_router.cpp  exclusivepair_pair_one.cpp  exclusivepair_pair_two.cpp  pubsub_sub.cpp  pushpull_pull.cpp  reqrep_req.cpp
model/: auth.proto  employee.proto  graph.proto  route.proto
scripts/: gen-model.sh
src/: main.cpp  main_client.cpp  main_server.cpp
src/auth/: main.cpp
src/cpp/proto/proto/: auth.grpc.pb.cc  auth.grpc.pb.h  auth.pb.cc  auth.pb.h  graph.grpc.pb.cc  graph.grpc.pb.h  graph.pb.cc  graph.pb.h
src/cpp/s_auth/: main.cpp
src/cpp/s_auth/s_auth/: core.hpp
src/cpp/s_graph/: main.cpp
src/graph/: main.cpp
src/proto/: employee.grpc.pb.h  employee.pb.cc  employee.pb.h  greet.grpc.pb.cc  greet.grpc.pb.h  greet.pb.h  route.grpc.pb.cc
src/ze/: core.cpp  core.hpp  server.cpp  server.hpp
web/: package-lock.json  package.json
web/js/proto/: auth_pb.js  graph_grpc_web_pb.js  graph_pb.js
web/pages/: _app.tsx  index.tsx
web/proto/: AuthServiceClientPb.ts  GraphServiceClientPb.ts  auth_pb.d.ts  auth_pb.js  graph_pb.d.ts  graph_pb.js
